@@ -1,5 +1,7 @@
 package com.petguardian.booking.controller;
 
+import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -16,11 +18,13 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 
+import com.petguardian.area.service.AreaService;
 import com.petguardian.booking.model.BookingDisplayDTO;
 import com.petguardian.booking.model.BookingFavoriteVO;
 import com.petguardian.booking.model.BookingOrderVO;
 import com.petguardian.booking.service.BookingService;
 import com.petguardian.common.service.AuthStrategyService;
+import com.petguardian.evaluate.service.EvaluateService;
 import com.petguardian.member.model.Member;
 import com.petguardian.member.repository.register.MemberRegisterRepository;
 import com.petguardian.pet.model.PetRepository;
@@ -29,6 +33,8 @@ import com.petguardian.petsitter.model.PetSitterServiceRepository;
 import com.petguardian.sitter.model.SitterMemberRepository;
 import com.petguardian.sitter.model.SitterRepository;
 import com.petguardian.sitter.model.SitterVO;
+import com.petguardian.wallet.model.Wallet;
+import com.petguardian.wallet.model.WalletRepository;
 
 import jakarta.servlet.http.HttpServletRequest;
 
@@ -62,7 +68,13 @@ public class BookingViewController {
     private MemberRegisterRepository memberRepository;
 
     @Autowired
-    private com.petguardian.evaluate.service.EvaluateService evaluateService;
+    private AreaService areaService;
+    
+    @Autowired
+    private EvaluateService evaluateService;
+    
+    @Autowired
+    private WalletRepository walletRepository;
 
     /**
      * 【顯示保姆服務列表頁面】
@@ -117,7 +129,6 @@ public class BookingViewController {
                 .map(s -> {
                     BookingDisplayDTO dto = new BookingDisplayDTO(s, finalFavIds.contains(s.getSitterId()));
                     dto.setMemImage(memberImageMap.getOrDefault(s.getMemId(), "/images/default-avatar.png"));
-
                     dto.setMemImage(memberImageMap.getOrDefault(
                             s.getMemId(),
                             "/images/default-avatar.png"));
@@ -135,13 +146,29 @@ public class BookingViewController {
 
                     return dto;
                 }).collect(Collectors.toList());
+        if (currentMemId != null) {
+            int balance = walletRepository.findByMemId(currentMemId)
+                    .map(Wallet::getBalance).orElse(0);
+            model.addAttribute("walletBalance", balance);
+        }
+        int totalPages = sitterPage.getTotalPages();
+        int actualDisplayCount = displayList.size();
+        int adjustedTotalPages = totalPages;
+        // 如果第一頁過濾後少於 6 筆，說明總數需要調整
+        if (page == 0 && actualDisplayCount < 6 && totalPages > 1) {
+            adjustedTotalPages = totalPages - 1;
+        }
+
 
         // 6. 將資料傳給前端頁面
         model.addAttribute("sitters", displayList);
         model.addAttribute("currentPage", page);
-        model.addAttribute("totalPages", sitterPage.getTotalPages()); // 修正 odel -> model
+        model.addAttribute("totalPages", adjustedTotalPages);
         model.addAttribute("currentMemId", currentMemId);
-        addCommonAttributes(request, model);
+        model.addAttribute("availableCities", areaService.getAllCities());
+
+        addCommonAttributes(request, model); 
+        
 
         return "frontend/services";
     }
@@ -183,18 +210,50 @@ public class BookingViewController {
                 .filter(s -> s.getSitterStatus() == 0) // 只顯示啟用中的保姆
                 .filter(s -> currentMemId == null || !s.getMemId().equals(currentMemId)) // 不顯示自己
                 .filter(s -> {
-                    // 如果沒有輸入地區，顯示全部
-                    if (area == null || area.trim().isEmpty()) {
+                    if (area == null || area.trim().isEmpty() || "請選擇行政區".equals(area)) {
                         return true;
                     }
-                    // 有輸入地區，則地址必須包含該關鍵字
+                    // 優先檢查服務地區列表
+                            
+                    if (s.getServiceAreas() != null) {
+                        boolean matchArea = s.getServiceAreas().stream()
+                                .anyMatch(sa -> sa.getArea() != null && sa.getArea().getDistrict().equals(area));
+                        if (matchArea) return true;
+                    }
+                    // 備案：檢查地址字串
                     return s.getSitterAdd() != null && s.getSitterAdd().contains(area);
                 })
-                .toList();
+                .collect(Collectors.toList());
 
-        // 4. 傳遞資料給前端
-        model.addAttribute("sitters", filteredSitters);
+        // 4. 取得收藏狀態與頭像 (統一封裝為 DTO)
+        java.util.Set<Integer> favSitterIds = new java.util.HashSet<>();
+        if (currentMemId != null) {
+            favSitterIds = bookingService.getSitterFavoritesByMember(currentMemId)
+                    .stream()
+                    .map(BookingFavoriteVO::getSitterId)
+                    .collect(Collectors.toSet());
+        }
+
+        List<Integer> memIds = filteredSitters.stream().map(SitterVO::getMemId).collect(Collectors.toList());
+        Map<Integer, String> memberImageMap = new HashMap<>();
+        sitterMemberRepository.findAllById(memIds).forEach(m -> {
+            memberImageMap.put(m.getMemId(), m.getMemImage() != null ? m.getMemImage() : "/images/default-avatar.png");
+        });
+
+        final java.util.Set<Integer> finalFavIds = favSitterIds;
+        List<BookingDisplayDTO> displayList = filteredSitters.stream().map(s -> {
+            BookingDisplayDTO dto = new BookingDisplayDTO(s, finalFavIds.contains(s.getSitterId()));
+            dto.setMemImage(memberImageMap.getOrDefault(s.getMemId(), "/images/default-avatar.png"));
+            String city = (s.getServiceAreas() != null && !s.getServiceAreas().isEmpty()) 
+                    ? s.getServiceAreas().get(0).getArea().getCityName() : "全區服務";
+            dto.setServicesJson(city);
+            return dto;
+        }).collect(Collectors.toList());
+
+        // 5. 傳遞資料給前端
+        model.addAttribute("sitters", displayList);
         model.addAttribute("order", new BookingOrderVO());
+        model.addAttribute("availableCities", areaService.getAllCities());
         addCommonAttributes(request, model); // 加入共用資料（如寵物清單）
 
         return "frontend/services";
@@ -210,22 +269,62 @@ public class BookingViewController {
     @GetMapping("/memberOrders")
     public String listMemberOrders(
             @RequestParam(required = false) Integer status,
+            @RequestParam(defaultValue = "0") int page,
             HttpServletRequest request,
             Model model) {
 
         // 1. 取得當前登入使用者 ID
         Integer memId = authStrategyService.getCurrentUserId(request);
-        if (memId == null) {
-            return "redirect:/front/loginpage"; // 未登入，導向登入頁
-        }
+//        if (memId == null) {
+//            return "redirect:/front/loginpage"; // 未登入，導向登入頁
+//        }
 
         // 2. 根據狀態查詢預約（有 status 參數則過濾，沒有則查全部）
         List<BookingOrderVO> bookingList = (status != null)
                 ? bookingService.findByMemberAndStatus(memId, status)
                 : bookingService.getOrdersByMemberId(memId);
 
+        int pageSize = 6;
+        int totalRecords = bookingList.size();
+        int totalPages = (int) Math.ceil((double) totalRecords / pageSize);
+        if (page < 0) page = 0;
+        if (totalPages > 0 && page >= totalPages) page = totalPages - 1;
+        int start = page * pageSize;
+        int end = Math.min(start + pageSize, totalRecords);
+        
+        List<BookingOrderVO> pagedList = (totalRecords > 0) ? bookingList.subList(start, end) : new ArrayList<>();
+        
+        bookingList = bookingList.stream()
+        	    .filter(order -> {
+        	        // [篩選] 已取消的訂單若超過一個月則不顯示
+        	        if (order.getOrderStatus() == 3 || order.getOrderStatus() == 4 || order.getOrderStatus() == 6) {
+        	            LocalDateTime oneMonthAgo = LocalDateTime.now().minusMonths(1);
+        	            // 建議使用 updatedAt 判斷，若無則用 startTime
+        	            LocalDateTime compareDate = (order.getUpdatedAt() != null) ? order.getUpdatedAt() : order.getStartTime();
+        	            return compareDate.isAfter(oneMonthAgo);
+        	        }
+        	        return true;
+        	    })
+        	    .sorted((o1, o2) -> {
+        	        // [排序] 1. 優先權 (進行中=1, 即將到來=2, 服務完成=3, 取消=4)
+        	        int p1 = getOrderPriority(o1.getOrderStatus());
+        	        int p2 = getOrderPriority(o2.getOrderStatus());
+        	        
+        	        if (p1 != p2) return p1 - p2;
+        	        
+        	        // [排序] 2. 同等級內部的細分排序
+        	        if (p1 == 2) { // 即將到來：時間由近到遠 (昇冪)
+        	            return o1.getStartTime().compareTo(o2.getStartTime());
+        	        } else { // 其他（服務中、完成、取消）：時間由新到舊 (降冪)
+        	            return o2.getStartTime().compareTo(o1.getStartTime());
+        	        }
+        	    })
+        	    .collect(Collectors.toList());
         // 3.傳遞資料給前端
-        model.addAttribute("bookingList", bookingList);
+        model.addAttribute("bookingList", pagedList);
+        model.addAttribute("currentPage", page);
+        model.addAttribute("totalPages", totalPages);
+        model.addAttribute("status", status);
         model.addAttribute("currentStatus", status);
         model.addAttribute("memId", memId);
         model.addAttribute("memName", authStrategyService.getCurrentUserName(request));
@@ -239,6 +338,13 @@ public class BookingViewController {
         return "frontend/dashboard-bookings";
     }
 
+    private int getOrderPriority(Integer status) {
+        if (status == 1) return 1; // 進行中
+        if (status == 0) return 2; // 即將到來
+        if (status == 2 || status == 5) return 3; // 完成
+        return 4; // 取消 / 其他
+    }
+    
     /**
      * 【加入頁面常用資料】
      * 如果使用者已登入，載入他的寵物清單
@@ -250,8 +356,17 @@ public class BookingViewController {
         List<PetVO> myPets = (memId != null)
                 ? petRepository.findByMemId(memId)
                 : new java.util.ArrayList<>();
+        
+        SitterVO sitterVO = (memId != null) 
+                ? sitterRepository.findByMemId(memId) 
+                : null;
+        
+        if (memId != null) {
+            memberRepository.findById(memId).ifPresent(m -> model.addAttribute("currentMember", m));
+        }
 
         model.addAttribute("myPets", myPets);
+        model.addAttribute("sitter", sitterVO);
 
     }
 
